fix: code block on safari

--- a/src/css/components/navigation.css
+++ b/src/css/components/navigation.css
@@ -20,6 +20,7 @@
   position: relative;
   margin-right: var(--space-l);
   word-wrap: normal;
+  flex-shrink: 0;
 }
 
 .nav__link:last-child {
